<resources>
    <string name="app_name">OnStep</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_bluetooth">Bluetooth</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="authors_message"><![CDATA[Brought to you by Sintuz & Fedeb]]></string>
    <string name="app_display_name">OnStep App</string>
    <string name="makerstation_logo">MarkerStation logo</string>
    <string name="home">Home</string>
    <string name="welcome">Welcome!</string>
    <string name="check_github">Check the app\'s repository on GitHub</string>
    <string name="visit_our_website">Check our website</string>
    <string name="options">Options</string>
    <string name="dark_mode">Dark mode</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="connectivity">Connectivity</string>
    <string name="scan">Scan</string>
    <string name="stop_discovery">Stop discovery</string>
    <string name="device_name">Device name</string>
    <string name="mac_address">MAC Address</string>
    <string name="disconnect">Disconnect</string>
    <string name="open_logs">Open logs</string>
    <string name="send_custom_commands">Send custom commands</string>
    <string name="send_custom_data">Send custom data</string>
    <string name="insert_custom_command">Insert custom command</string>
    <string name="submit">Submit</string>
    <string name="telescope_logo">Telescope logo</string>
    <string name="motion_controls">Motion controls</string>
    <string name="controls">Controls</string>
    <string name="minus">-</string>
    <string name="west_pointing_arrow">West pointing arrow</string>
    <string name="up_pointing_arrow">Up pointing arrow</string>
    <string name="East_pointing_arrow">East pointing arrow</string>
    <string name="down_pointing_arrow">Down pointing arrow</string>
    <string name="plus">+</string>
    <string name="motor_speed">Motor speed</string>
    <string name="set_motor_speed">:R%d#</string>

    <string name="empty_int">%d</string>
    <string name="enable_tracking">Enable tracking</string>
    <string name="onstep">OnStep</string>
</resources>