<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/home">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/menu_home" />
        </menu>
    </item>
    <item android:title="@string/connectivity">
        <menu>
            <item
                android:id="@+id/nav_bluetooth"
                android:icon="@drawable/ic_bluetooth"
                android:title="@string/bluetooth" />
            <item
                android:id="@+id/nav_send_custom_commands"
                android:icon="@drawable/ic_send"
                android:title="@string/send_custom_commands" />
        </menu>
    </item>
    <item android:title="@string/controls">
        <menu>
            <item
                android:id="@+id/nav_motion_controls"
                android:icon="@drawable/ic_motion_controls"
                android:title="@string/motion_controls" />
        </menu>
    </item>
    <item android:title="@string/options">
        <menu>
            <item
                android:id="@+id/nav_options"
                android:icon="@drawable/ic_options"
                android:title="@string/options" />
        </menu>
    </item>
</menu>