<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.fablab.onstep.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_options"
        android:name="com.fablab.onstep.ui.options.OptionsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_options" />

    <fragment
        android:id="@+id/nav_bluetooth"
        android:name="com.fablab.onstep.ui.bluetooth.BluetoothFragment"
        android:label="@string/action_bluetooth"
        tools:layout="@layout/fragment_bluetooth" />

    <fragment
        android:id="@+id/nav_send_custom_commands"
        android:name="com.fablab.onstep.ui.commands.SendCustomCommandsFragment"
        android:label="@string/send_custom_commands"
        tools:layout="@layout/fragment_send_custom_commands" />

    <fragment
        android:id="@+id/nav_motion_controls"
        android:name="com.fablab.onstep.ui.motion.MotionControlsFragment"
        android:label="@string/motion_controls"
        tools:layout="@layout/fragment_motion_controls" />

</navigation>